Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@ footer{
     <img src="vivi1.jpg" class="opening-image">
 
     <br>
-    <button onclick="unlockNote()">Click ts bday ghorl ⬩➤</button>
+    <button onclick="unlockNote()">Click this my love ⬩➤</button>
 
     <div class="final-section" id="finalSection">
 
@@ -242,7 +242,7 @@ footer{
 
             <div class="note-text">
 
-                <h2>Read this well my love, Vivi ❤︎</h2>
+                <h2>Read this well my darling Vivi ❤︎</h2>
 
                 <p>Happy birthday, my love. I’m really glad you opened this because today is about you. It’s crazy how many days have passed and how the city keeps moving, how people come and go, how everything keeps changing so fast, yet you still feel like you. Time keeps adding numbers to your age, but the heart I met, the soul I care about, is still the same beautiful one. Even when I was away, you kept growing and reaching new heights quietly, and I’m honestly so proud of you for that.</p>
 
@@ -289,4 +289,5 @@ function unlockNote(){
 </body>
 
 </html>
+
 
