--- a/index.html
+++ b/index.html
@@ -44,13 +44,10 @@ body::before{
     to{ transform:translateY(120vh);}
 }
 
-section{
-    min-height:100vh;
-    display:flex;
-    flex-direction:column;
-    align-items:center;
-    justify-content:center;
-    padding:40px 20px;
+.container{
+    padding:60px 20px;
+    max-width:1100px;
+    margin:auto;
     text-align:center;
 }
 
@@ -58,19 +55,21 @@ h1{
     font-family:'Playfair Display', serif;
     font-size:38px;
     margin-bottom:10px;
+    letter-spacing:1px;
 }
 
 .subtitle{
     opacity:0.8;
-    margin-bottom:25px;
+    margin-bottom:30px;
 }
 
 .opening-image{
     width:100%;
     max-width:300px;
     border-radius:25px;
+    margin-top:20px;
     box-shadow:0 0 40px rgba(168,85,247,0.6);
-    transition:0.4s;
+    transition:0.4s ease;
 }
 
 .opening-image:hover{
@@ -78,7 +77,7 @@ h1{
 }
 
 button{
-    margin-top:25px;
+    margin-top:30px;
     padding:15px 35px;
     border:none;
     border-radius:50px;
@@ -86,11 +85,36 @@ button{
     background:linear-gradient(90deg,#a855f7,#ec4899);
     color:white;
     cursor:pointer;
-    transition:0.3s;
+    transition:0.3s ease;
+    box-shadow:0 0 20px rgba(236,72,153,0.6);
 }
 
 button:hover{
     transform:scale(1.08);
+    box-shadow:0 0 30px rgba(236,72,153,0.9);
+}
+
+.final-section{
+    display:none;
+    opacity:0;
+    margin-top:100px; 
+    padding-top:60px;
+    border-top:1px solid rgba(255,255,255,0.08);
+}
+
+.fade-in{
+    animation:fadeIn 1.5s ease forwards;
+}
+
+@keyframes fadeIn{
+    from{
+        opacity:0;
+        transform:translateY(40px);
+    }
+    to{
+        opacity:1;
+        transform:translateY(0);
+    }
 }
 
 .note-wrapper{
@@ -99,18 +123,24 @@ button:hover{
     gap:40px;
     align-items:center;
     justify-content:center;
+    margin-top:30px;
     background:rgba(255,255,255,0.08);
     backdrop-filter:blur(15px);
     border-radius:30px;
     padding:40px;
-    max-width:1000px;
-    margin:auto;
+    box-shadow:0 0 50px rgba(168,85,247,0.3);
 }
 
 .side-image{
     width:100%;
     max-width:260px;
     border-radius:25px;
+    box-shadow:0 0 30px rgba(168,85,247,0.6);
+    transition:0.4s;
+}
+
+.side-image:hover{
+    transform:scale(1.05);
 }
 
 .note-text{
@@ -126,8 +156,12 @@ button:hover{
 }
 
 .meme-section{
-    margin-top:70px;
-    width:100%;
+    margin-top:80px;
+}
+
+.meme-section h2{
+    font-family:'Playfair Display', serif;
+    margin-bottom:20px;
 }
 
 .memes{
@@ -135,26 +169,35 @@ button:hover{
     flex-wrap:wrap;
     justify-content:center;
     gap:20px;
-    margin-top:20px;
 }
 
 .memes img{
     width:100%;
     max-width:200px;
     border-radius:20px;
+    box-shadow:0 0 20px rgba(0,0,0,0.5);
+    transition:0.3s;
+}
+
+.memes img:hover{
+    transform:scale(1.08);
 }
 
 footer{
-    margin-top:60px;
+    margin-top:100px;
+    padding:20px;
     font-size:13px;
     opacity:0.6;
-    text-align:center;
 }
 
 @media (max-width:768px){
 
     h1{
-        font-size:26px;
+        font-size:28px;
+    }
+
+    .container{
+        padding:40px 15px;
     }
 
     .note-wrapper{
@@ -168,6 +211,11 @@ footer{
 
     .note-text p{
         text-align:justify;
+    }
+
+    button{
+        width:100%;
+        max-width:280px;
     }
 
 }
@@ -214,16 +262,24 @@ footer{
     </div>
 
     <footer>
-        Not much effort but.. ik youd like it so yeah mwuehehehe, iloveyousomuchmybeautifultannedchinitabaddiedommymommypeggingdevicecutieprettiestmostbeautifulbossywifeyvivi ❤︎
+        Not much effort but.. ik youd like it so yeah mwuehehehe, iloveyousomuchmybeautifultannedchinitabaddiedommymommy
+        peggingdevicecutieprettiestmostbeautifulbossywifeyvivi ❤︎
     </footer>
 
 </section>
 
 <script>
-function goNext(){
-    document.getElementById("screen2").scrollIntoView({behavior:"smooth"});
+function unlockNote(){
+    const section = document.getElementById("finalSection");
+    section.style.display = "block";
+
+    setTimeout(() => {
+        section.classList.add("fade-in");
+        section.scrollIntoView({ behavior: "smooth" });
+    }, 100);
 }
 </script>
 
 </body>
 </html>
+
