Refactor HTML structure and styles for birthday page

--- a/index.html
+++ b/index.html
@@ -189,7 +189,6 @@ footer{
     font-size:13px;
     opacity:0.6;
 }
-
 @media (max-width:768px){
 
     h1{
@@ -225,48 +224,57 @@ footer{
 
 <body>
 
-<section id="screen1">
+<div class="container">
+
     <h1>.✦ ݁˖ Happy Birthday Vivi ❤︎</h1>
     <p class="subtitle">For someone who fckng annoys me each day till i die.</p>
+
     <img src="vivi1.jpg" class="opening-image">
-    <button onclick="goNext()">Click this my love ⬩➤</button>
-</section>
 
-<section id="screen2">
+    <br>
+    <button onclick="unlockNote()">Click ts bday ghorl ⬩➤</button>
 
-    <div class="note-wrapper">
-        <img src="vivi2.jpg" class="side-image">
+    <div class="final-section" id="finalSection">
 
-        <div class="note-text">
-            <h2>Read this well my darling Vivi ❤︎</h2>
+        <div class="note-wrapper">
 
-            <p>Happy birthday, my love. I’m really glad you opened this because today is about you. It’s crazy how many days have passed and how the city keeps moving, how people come and go, how everything keeps changing so fast, yet you still feel like you. Time keeps adding numbers to your age, but the heart I met, the soul I care about, is still the same beautiful one. Even when I was away, you kept growing and reaching new heights quietly, and I’m honestly so proud of you for that.</p>
+            <img src="vivi2.jpg" class="side-image">
 
-            <p>This year and the one before it, we’ve felt everything. Happiness, sadness, even moments of anger, but through all of it I’m grateful that I got to meet you and be part of your life. Days that once felt heavy and lonely feel lighter when you’re here. Now you’re growing even more, and I hope you stay strong and resilient, especially on the days that feel the darkest. Even when it’s hard and you feel tired, I believe in the light inside you, the kind that can shine through any shadow.</p>
+            <div class="note-text">
 
-            <p>I know you still struggle sometimes. I know things don’t automatically become easy just because I’m here. But please remember that you are not alone anymore. I am here. I choose to stay. Through the good days, the messy days, and the quiet ones too. Always, okay?</p>
+                <h2>Haiii Vivi ❤︎</h2>
 
-            <p>People may fade and moments may pass, but memories stay. So let’s create memories worth remembering, the kind that stay carved in our hearts no matter where life takes us.</p>
+                <p>Happy birthday, my love. I’m really glad you opened this because today is about you. It’s crazy how many days have passed and how the city keeps moving, how people come and go, how everything keeps changing so fast, yet you still feel like you. Time keeps adding numbers to your age, but the heart I met, the soul I care about, is still the same beautiful one. Even when I was away, you kept growing and reaching new heights quietly, and I’m honestly so proud of you for that.</p>
 
-            <p><strong>Happy birthday, my love.</strong> May God guide you through every hardship, lift you up when you feel low, and bless you with peace, strength, and happiness today and always. I love you so much, Vivi.❤︎</p>
+                <p>This year and the one before it, we’ve felt everything. Happiness, sadness, even moments of anger, but through all of it I’m grateful that I got to meet you and be part of your life. Days that once felt heavy and lonely feel lighter when you’re here. Now you’re growing even more, and I hope you stay strong and resilient, especially on the days that feel the darkest. Even when it’s hard and you feel tired, I believe in the light inside you, the kind that can shine through any shadow.</p>
+
+                <p>I know you still struggle sometimes. I know things don’t automatically become easy just because I’m here. But please remember that you are not alone anymore. I am here. I choose to stay. Through the good days, the messy days, and the quiet ones too. Always, okay?</p>
+
+                <p>People may fade and moments may pass, but memories stay. So let’s create memories worth remembering, the kind that stay carved in our hearts no matter where life takes us.</p>
+
+                <p><strong>Happy birthday, my love.</strong> May God guide you through every hardship, lift you up when you feel low, and bless you with peace, strength, and happiness today and always. I love you so much, Vivi.❤︎</p>
+
+            </div>
         </div>
-    </div>
 
-    <div class="meme-section">
-        <h2>Mga mukha mong fav ko❤︎</h2>
-        <div class="memes">
-            <img src="meme1.jpg">
-            <img src="meme2.jpg">
-            <img src="meme3.jpg">
+        <div class="meme-section">
+            <h2>Mga mukha mong fav ko❤︎</h2>
+            <div class="memes">
+                <img src="meme1.jpg">
+                <img src="meme2.jpg">
+                <img src="meme3.jpg">
+            </div>
         </div>
+
     </div>
 
     <footer>
-        Not much effort but.. ik youd like it so yeah mwuehehehe, iloveyousomuchmybeautifultannedchinitabaddiedommymommy
+        Not much effort but.. ik youd like it so yeah mwuehehehe,
+        iloveyousomuchmybeautifultannedchinitabaddiedommymommy
         peggingdevicecutieprettiestmostbeautifulbossywifeyvivi ❤︎
     </footer>
 
-</section>
+</div>
 
 <script>
 function unlockNote(){
@@ -281,5 +289,5 @@ function unlockNote(){
 </script>
 
 </body>
-</html>
 
+</html>
