--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@ footer{
     </div>
 
     <footer>
-        Not much effort but.. ik youd like it so yeah mwuehehehe,
+        Not much effort but.. ik youd like it so yeah mwuehehehe
     </footer>
 
 </div>
@@ -289,5 +289,6 @@ function unlockNote(){
 </body>
 
 </html>
+
 
 
